# etl

./: .gitignore  create_aws_site.bat  install_requirements.bat  pyproject.toml  setup.cfg
.github/workflows/: build.yml
data/costume_core_ontology/loaded/: costume_core_ontology.ttl  costume_core_ontology.xml  costume_core_ontology_worksheet.ttl
data/vccc_high_quality/: configuration.json
dressdiscover_etl/: costume_core.py
dressdiscover_etl/extractors/: costume_core_data_airtable_extractor.py  costume_core_ontology_airtable_extractor.py
dressdiscover_etl/loaders/: ant_conc_txt_loader.py  costume_core_ontology_py_loader.py  costume_core_ontology_rdf_file_loader.py  costume_core_property_extractor_csv_file_loader.py  dressdiscover_rdf_file_loader.py
dressdiscover_etl/models/: costume_core_ontology.py  costume_core_predicate.py  costume_core_predicates.py  costume_core_rights.py  costume_core_term.py  costume_core_terms.py
dressdiscover_etl/namespaces/: __init__.py  bind_namespaces.py
dressdiscover_etl/pipelines/: costume_core_models_to_paradicms_gui_pipeline.py  costume_core_ontology_airtable_to_ontology_rdf_pipeline.py  costume_core_ontology_airtable_to_rdf_pipeline.py  costume_core_ontology_airtable_to_worksheet_rdf_pipeline.py  costume_core_ontology_pipeline.py  costume_core_template_pipeline.py  iastate_amd_354_pipeline.py  penn_museum_pipeline.py  schcc_pipeline.py  uc_daap_vac_pipeline.py  union_pipeline.py  vccc_high_quality_pipeline.py  vccc_pipeline.py  vra_cams_pipeline.py
dressdiscover_etl/transformers/: costume_core_airtable_transformer.py  costume_core_models_to_paradicms_models_transformer.py  costume_core_omeka_classic_transformer.py  costume_core_ontology_airtable_to_costume_core_models_transformer.py  costume_core_ontology_airtable_to_worksheet_models_transformer.py  costume_core_ontology_transformer.py  costume_core_property_extractor.py  iastate_amd_354_transformer.py  penn_museum_transformer.py  schcc_transformer.py  tfc_transformer.py  uc_daap_vac_transformer.py  vccc_transformer.py  vra_cams_transformer.py
