[tool.poetry]
name = "dressdiscover-etl"
version = "0.0.1"
description = ""
authors = ["Minor G. <minorg@server.fake>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
paradicms-etl = { path = "../../paradicms/etl", develop = true }
paradicms-gui = { path = "../../paradicms/gui/loader", develop = true }
# pastpy = { path = "../../pastpy/requirements.txt", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
