[tool.poetry]
name = "dressdiscover-etl"
version = "0.0.1"
description = ""
authors = ["Minor G. <minorg@server.fake>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
spacy = "3.2.3"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0-py3-none-any.whl"}
scipy = "1.7.3"
textacy = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
paradicms-etl = { path = "../../paradicms/etl", develop = true }
paradicms-gui = { path = "../../paradicms/gui/loader", develop = true }
# pastpy = { path = "../../pastpy/requirements.txt", develop = true }
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
